change background image

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -36,7 +36,7 @@ div {
   color: #f6f6f6;
   padding: 150px 0;
 
-  background: #f6f6f6 url("/images/costa_rica_arenal_volcano.jpg") left center;
+  background: #f6f6f6 url("../images/nodeschool-costarica.jpg") left center;
   background-size: cover;
 
   h1 > a {
