mejora redacción y contenidos

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -198,3 +198,9 @@ blockquote cite:before {
   padding-top: 25px;
   margin-top: 25px;
 }
+
+#imagen-costa-rica{
+  background: #f6f6f6 url("../images/san-jose-costa-rica-at-sunrise.jpg") center center;
+  min-height: 300px;
+  background-size: cover;
+}
