add countdown to landing page connects #4 merge and close #9

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -62,6 +62,15 @@ div {
   }
 }
 
+.countdown {
+  span {
+    font-weight: bold;
+  }
+  font-size: 21px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
 .who-are-we {
   margin: 0 auto;
   border: 3px solid #ffffff;
