--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -35,7 +35,6 @@ div {
 }
 
 .site-header {
-  border-top: 5px solid #e6be00;
   color: #f6f6f6;
   padding: 150px 0;
 
@@ -234,22 +233,16 @@ blockquote cite:before {
 
 // Navigation Options
 
-@import url(http://fonts.googleapis.com/css?family=Alegreya+Sans:300,400,700);
+$header-top: #E6BE00;
 
-/* ICON STYLES - ICON FROM: http://fontastic.me/
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
+////////////////////////
 
-@font-face {
-  font-family: "untitled-font-1";
-  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/untitled-font-1.eot");
-  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/untitled-font-1.eot#iefix") format("embedded-opentype"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/untitled-font-1.woff") format("woff"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/untitled-font-1.ttf") format("truetype"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/162656/untitled-font-1.svg#untitled-font-1") format("svg");
-  font-weight: normal;
-  font-style: normal;
+.visible-inline-block {
+  display: inline-block;
 }
 
-
 [class^="icon-"]:after, [class*=" icon-"]:after {
-  font-family: "untitled-font-1";
+  font-family: "Monaco";
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -324,39 +317,11 @@ blockquote cite:before {
   transition-delay: 1s;
 }
 
-/* RESET-GENERAL STYLES
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-
-* {
-  margin: 0;
-  padding: 0;
-  font-family: 'Alegreya Sans', Arial, sans-serif;
-  text-transform: uppercase;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  color: black;
-  letter-spacing: .18em;
-}
-
-a {
-  text-decoration: none;
-  color: white;
-}
-
-ul, li {
-  list-style-type: none;
-}
-
 /* NAV STYLES
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 .header-top {
-  background: rgba(0, 47, 77, 0.3);
+  background: $header-top;
   height: 70px;
   padding: 0 10px;
   position: fixed;
@@ -510,19 +475,19 @@ h3 {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 #fp-nav ul li a span, .fp-slidesNav ul li a span {
-  background: white;
-  width: 8px;
-  height: 8px;
-  margin: -4px 0 0 -4px;
+  background: $header-top;
+  //width: 8px;
+  //height: 8px;
+  //margin: -4px 0 0 -4px;
 }
 
 #fp-nav ul li a.active span, .fp-slidesNav ul li a.active span, #fp-nav ul li:hover a.active span, .fp-slidesNav ul li:hover a.active span {
-  width: 16px;
-  height: 16px;
-  margin: -8px 0 0 -8px;
-  background: transparent;
-  box-sizing: border-box;
-  border: 1px solid #24221F;
+  //width: 16px;
+  //height: 16px;
+  //margin: -8px 0 0 -8px;
+  //background: transparent;
+  //box-sizing: border-box;
+  //border: 1px solid #24221F;
 }
 
 /* MQ STYLES
