chore(mentors): add mentors to jade template

--- a/app/index.jade
+++ b/app/index.jade
@@ -145,7 +145,7 @@ html(lang='es')
         br
         br
         #mentors-container
-          | loading mentors data ...
+          | Loading mentors data ...
       // row
     // container
     // ==== SPONSORS ====
@@ -215,7 +215,11 @@ html(lang='es')
     // endbuild
     script#mentor-template(type='text/x-handlebars-template').
       <div class="col-lg-3 col-sm-2 centered">
+      {{#if twitter}}
       <img class="img img-circle" src="https://twitter.com/{{twitter}}/profile_image?size=original" height="120px" width="120px" alt="">
+      {{else}}
+      <img class="img img-circle" src="https://avatars.githubusercontent.com/{{github}}?s=120" height="120px" width="120px" alt="">
+      {{/if}}
       <br>
       <h4><b>{{name}}</b></h4>
       {{#if website}}<a target="_blank" href="{{website}}" class="icon icon-pencil"></a>{{/if}}
