fix(mentors): add min-height to profile pics to avoid stepdown

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -226,3 +226,9 @@ blockquote cite:before {
   min-height: 300px;
   background-size: cover;
 }
+
+#mentors-container{
+  >div{
+    min-height:250px;
+  }
+}
