fix(layout): fix horizontal scrolling

--- a/app/index.jade
+++ b/app/index.jade
@@ -106,7 +106,7 @@ html(lang='es')
                   a.btn.btn-success(href='#', target='_blank') Reserva tu lugar
             br
     // ==== TALLERES ====
-    #imagen-costa-rica.row
+    #imagen-costa-rica.row-fluid
     // ==== TALLERES ====
     #talleres.container
       section
