fix site header padding

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -36,7 +36,7 @@ div {
 .site-header {
   border-top: 5px solid #f1eb24;
   color: #f6f6f6;
-  padding: 80px 0;
+  padding: 50px !important;
   background: #f6f6f6 url("../images/nodeschool-site-top.png") center center;
   background-size: cover;
 
